// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App views should render the browse page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "7968",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"1f20-Vy4T2DWcV3T/EAXNn0vgHQu/cGs\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the browse page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
 <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!-- <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\"> -->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
 
 <link rel=\\"stylesheet\\" href=\\"/static/styles/browse.css\\" />
</head>
<body class=\\"bg-light\\">
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span>
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
    </div>   
</nav>
  </header>
  <div class=\\"content-container\\">
    <div class=\\"row\\">
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product1.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 1</h1>
            <p class=\\"price\\">$26.99</p>
            <p>A product.</p>
            <p><button onclick=\\"add_to_cart('1')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product2.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 2</h1>
            <p class=\\"price\\">$9.99</p>
            <p>Another product.</p>
            <p><button onclick=\\"add_to_cart('2')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product3.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 3</h1>
            <p class=\\"price\\">$10.50</p>
            <p>Wow, that&#39;s some product.</p>
            <p><button onclick=\\"add_to_cart('3')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product4.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 4</h1>
            <p class=\\"price\\">$6.00</p>
            <p>Cheap product.</p>
            <p><button onclick=\\"add_to_cart('4')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product5.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 5</h1>
            <p class=\\"price\\">$56.00</p>
            <p>Expensive product.</p>
            <p><button onclick=\\"add_to_cart('5')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product6.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 6</h1>
            <p class=\\"price\\">$31.26</p>
            <p>Man we&#39;re kind of running out of these, huh?</p>
            <p><button onclick=\\"add_to_cart('6')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product7.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 7</h1>
            <p class=\\"price\\">$5.49</p>
            <p>Oh wow this is even cheaper.</p>
            <p><button onclick=\\"add_to_cart('7')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product8.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 8</h1>
            <p class=\\"price\\">$10.69</p>
            <p>Nice.</p>
            <p><button onclick=\\"add_to_cart('8')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product9.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 9</h1>
            <p class=\\"price\\">$0.99</p>
            <p>Dollar store shelf material v2.0.</p>
            <p><button onclick=\\"add_to_cart('9')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product10.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 10</h1>
            <p class=\\"price\\">$12.00</p>
            <p>Just your average product.</p>
            <p><button onclick=\\"add_to_cart('10')\\">Add to Cart</button></p>
          </div> 
        </div>
       
    </div>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  <script>
    function add_to_cart(id) {
      console.log(id);

      $.post('/api/cart/add', { productId: id }, (data, status) => {
        // Handle response data, or do nothing
        console.log(data);
        console.log(status);
        $('#badge-cart-size').text(data.products.reduce((total, product) => {
          return total + product.quantity;
        }, 0));
      });
    }
  </script>
</body>
</html>
"
`;

exports[`App views should render the cart page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "6525",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"197d-Kpu38qLvclBmxc+Mrz6UEt9JwvQ\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the cart page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
 <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!-- <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\"> -->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
 
 <link rel=\\"stylesheet\\" href=\\"/static/styles/browse.css\\" />
</head>
<body>
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span>
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
    </div>   
</nav>
  </header>

  <div class=\\"container content-container\\">
   <div class=\\"card shopping-cart\\">
            <div class=\\"card-header bg-dark text-light clearfix\\">
                <i class=\\"fa fa-shopping-cart\\" aria-hidden=\\"true\\"></i>
                Shopping Cart
                <a href=\\"/browse\\" class=\\"btn btn-outline-light btn-sm float-right\\" >Continue Shopping</a>
            </div>
            <div class=\\"card-body\\">
                <!-- PRODUCT -->
                
                <div class=\\"row\\">
                    <div class=\\"col-12 col-sm-12 col-md-2 text-center\\">
                            <img class=\\"product-image\\" src=\\"/static/images/product4.jpg\\" alt=\\"prewiew\\" style=\\"width:100px; height:100px\\">
                    </div>
                    <div class=\\"col-12 text-sm-center col-sm-12 text-md-left col-md-6\\">
                        <h4 class=\\"product-name\\"><strong>Product 4</strong></h4>
                        <h4>
                            <small>Cheap product.</small>
                        </h4>
                    </div>
                    <div class=\\"col-12 col-sm-12 text-sm-center col-md-4 text-md-right row\\">
                        <div class=\\"col-3 col-sm-3 col-md-6 text-md-right\\" style=\\"padding-top: 5px\\">
                            <h6><strong>$6.00 <span class=\\"text-muted\\">x</span></strong></h6>
                        </div>
                        <div class=\\"col-4 col-sm-4 col-md-4\\">
                            <div class=\\"quantity\\">
                                <input type=\\"text\\" class=\\"form-control input-sm\\" value=\\"2\\" onchange=\\"updateQuantity(4, this);\\">
                            </div>
                        </div>
                        <div class=\\"col-2 col-sm-2 col-md-2 text-right\\">
                            <button type=\\"button\\" class=\\"btn btn-outline-danger btn-xs\\">
                                <i class=\\"fa fa-trash\\" aria-hidden=\\"true\\" onclick=\\"deleteCartItem(4)\\"></i>
                            </button>
                        </div>
                    </div>
                </div>
                <hr>
                
                <!-- END PRODUCT -->
            <div class=\\"clearfix\\">
                <a href=\\"\\" class=\\"btn btn-outline-secondary float-right\\" onclick=\\"updateCart();\\">
                    Update Shopping Cart
                </a>
            </div>
        </div>
        <div class=\\"card-footer\\">
            <div class=\\"pull-rigt\\" style=\\"margin: 10px\\">
                <a href=\\"/checkout\\" class=\\"btn btn-dark btn-block pull-right\\">Checkout</a>
                <div class=\\"pull-right\\" style=\\"margin: 5px\\">
                    Total: <b>$12.00</b>
                </div>
            </div>
        </div>
    </div>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  <script>
    function deleteCartItem(productId) {
        $.ajax({
            url: '/api/cart/remove',
            type: 'post',
            data: {
            productId
            },
            dataType: 'json',
            success(data) {
            window.location.reload();
            },
            error(err) {
            console.log(err);
            }
        })
    };

    function updateQuantity(productId, el) {
        $.ajax({
            url: '/api/cart/update',
            type: 'post',
            data: {
                productId,
                quantity: $(el).val()
            },
            dataType: 'json',
            success(data) {
                // location.reload();
            },
            error(err) {
                console.log(err);
            }
        })
    };

    function updateCart() {
        window.location.reload();
    }
  </script>
  </body>
</html>
"
`;

exports[`App views should render the checkout page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "12537",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"30f9-CyuvBATvttfH46YUqjs02gfQhUk\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the checkout page successfully 2`] = `
"<!doctype html>
<html>
  <head>
    <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!-- <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\"> -->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
    <link rel=\\"stylesheet\\" href=\\"/static/styles/checkout.css\\" />
  </head>
  <body class=\\"bg-light\\">
    <header>
      <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span>
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
    </div>   
</nav>
    </header>
    <div class=\\"container content-container\\">
      <div class=\\"row\\">
      <!--order-md2 makes the shipping address come before shopping cart, mb-4 spaces tile from previous row-->
        <div class=\\"col-md-4 order-md-2 mb-4\\">
          <h4 class=\\"d-flex justify-content-between align-items-center mb-3\\">
            <a href=\\"/cart\\" class=\\"text-muted\\"><span class=\\"text-muted\\">Your cart</span></a>
            <!-- Optional feature to have total items in cart displayed-->
            <span class=\\"badge badge-secondary badge-pill\\" id=\\"badge-cart-size\\">2</span>
          </h4>
          <!-- creating unorderedlist to group all cart items, mb-3 is bottom margin of 16px if font size is 16px-->
          <ul class=\\"list-group mb-3\\">
          <!-- list-group-item: adding things to list, justify-content-between: format text spacing-->
            
              <li class=\\"list-group-item d-flex justify-content-between lh-condensed\\">
                <div>
                  <!--set top and bottom margin to zero-->
                  <h6 class=\\"my-0\\">Product 4</h6>
                  <small class=\\"text-muted\\">Cheap product.</small>
                </div>
                <div>
                  <span class=\\"text-muted\\">$6.00</span><br>
                  <span class=\\"text-muted float-right\\">x2</span>
                </div>
              </li>
            
            <li class=\\"list-group-item d-flex justify-content-between\\">
              <span>Total (USD)</span>
              <strong>$12.00</strong>
            </li>
          </ul>
        </div>
        <div class=\\"col-md-8 order-md-1\\">
          <h4 class=\\"mb-3\\">Shipping address</h4>
          <!-- Begin form for checkout information -->
          <!-- Need to turn off default browser input field validation to do custom validation with BS 4.0.0-->
          <form id=\\"address-form\\" action=\\"/summary\\" method=\\"POST\\" class=\\"needs-validation\\" novalidate>
            <div class=\\"row\\">
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"firstName\\">First name</label>
                <input type=\\"text\\" class=\\"form-control\\" name=\\"firstName\\" id=\\"firstName\\" placeholder=\\"John\\" value=\\"\\" required>
                <div class=\\"invalid-feedback\\">
                  Valid first name is required.
                </div>
              </div>
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"lastName\\">Last name</label>
                <input type=\\"text\\" class=\\"form-control\\" name=\\"lastName\\" id=\\"lastName\\" placeholder=\\"Doe\\" value=\\"\\" required>
                <div class=\\"invalid-feedback\\">
                  Valid last name is required.
                </div>
              </div>
            </div>

            <div class=\\"mb-3\\">
              <label for=\\"address\\">Street 1</label>
              <input type=\\"text\\" class=\\"form-control\\" name=\\"street1\\" id=\\"address\\" placeholder=\\"1234 Swagger Ln\\" required>
              <div class=\\"invalid-feedback\\">
                Please enter your shipping address.
              </div>
            </div>

            <div class=\\"mb-3\\">
              <label for=\\"address2\\">Street 2 <span class=\\"text-muted\\">(Optional)</span></label>
              <input type=\\"text\\" class=\\"form-control\\" name=\\"street2\\" id=\\"address2\\" placeholder=\\"Apartment or Suite\\">
            </div>

            <div class=\\"row\\">
              <div class=\\"col-md-5 mb-3\\">
                <label for=\\"country\\">Country</label>
                <select class=\\"custom-select d-block w-100\\" name=\\"country\\" id=\\"country\\" required>
                  <option value=\\"\\">Choose...</option>
                  <option value=\\"United States\\">United States</option>
                </select>
                <div class=\\"invalid-feedback\\">
                  Please select a valid country.
                </div>
              </div>
              <div class=\\"col-md-4 mb-3\\">
                <label for=\\"state\\">State</label>
				        <input type=\\"text\\" class=\\"form-control\\" name=\\"state\\" id=\\"state\\" placeholder=\\"Your State\\" required>
                <div class=\\"invalid-feedback\\">
                  Please provide a valid state.
                </div>
              </div>
              <div class=\\"col-md-4 mb-3\\">
                <label for=\\"city\\">City</label>
				        <input type=\\"text\\" class=\\"form-control\\" name=\\"city\\" id=\\"city\\" placeholder=\\"Your City\\" required>
                <div class=\\"invalid-feedback\\">
                  Please provide a valid city.
                </div>
              </div>              
              <div class=\\"col-md-3 mb-3\\">
                <label for=\\"zip\\">Zip Code</label>
                <input type=\\"text\\" class=\\"form-control\\" name=\\"zipcode\\" id=\\"zip\\" placeholder=\\"XXXXX\\" required>
                <div class=\\"invalid-feedback\\">
                  Zip code required.
                </div>
              </div>
            </div>

            <div class=\\"row\\">
              <div class=\\"col-md-4 address-feedback d-none\\" id=\\"address-feedback-correct\\">
                <span>Address verified!</span>
              </div>
              <div class=\\"col-md-4 address-feedback d-none\\" id=\\"address-feedback-incorrect\\">
                <span>Address invalid! Please correct it and try again.</span>
              </div>
            </div>

            <h4 class=\\"mb-3\\">Payment</h4>
            <div class=\\"d-block my-3\\">
              <div class=\\"custom-control custom-radio\\">
                <input id=\\"credit\\" value=\\"credit\\" name=\\"paymentMethod\\" type=\\"radio\\" class=\\"custom-control-input\\" checked required>
                <label class=\\"custom-control-label\\" for=\\"credit\\">Credit card</label>
              </div>
              <div class=\\"custom-control custom-radio\\">
                <input id=\\"debit\\" value=\\"debit\\" name=\\"paymentMethod\\" type=\\"radio\\" class=\\"custom-control-input\\" required>
                <label class=\\"custom-control-label\\" for=\\"debit\\">Debit card</label>
              </div>
              <div class=\\"custom-control custom-radio\\">
                <input id=\\"paypal\\" value=\\"paypal\\" name=\\"paymentMethod\\" type=\\"radio\\" class=\\"custom-control-input\\" required>
                <label class=\\"custom-control-label\\" for=\\"paypal\\">Paypal</label>
              </div>
            </div>
            <div class=\\"row\\">
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"cc-name\\">Name on card</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-name\\" name=\\"ccName\\" required>
                <small class=\\"text-muted\\">Full name as displayed on card</small>
                <div class=\\"invalid-feedback\\">
                  Name on card is required
                </div>
              </div>
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"cc-number\\">Credit card number</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-number\\" name=\\"ccNumber\\" required>
                <div class=\\"invalid-feedback\\">
                  Credit card number is required
                </div>
              </div>
            </div>
            <div class=\\"row\\">
              <div class=\\"col-md-3 mb-3\\">
                <label for=\\"cc-expiration\\">Expiration</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-expiration\\" required>
                <div class=\\"invalid-feedback\\">
                  Expiration date required
                </div>
              </div>
              <div class=\\"col-md-3 mb-3\\">
                <label for=\\"cc-expiration\\">CVV</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-cvv\\" required>
                <div class=\\"invalid-feedback\\">
                  Security code required
                </div>
              </div>
            </div>
            <hr class=\\"mb-4\\">
            <button class=\\"btn btn-dark btn-lg btn-block\\" type=\\"button\\" id=\\"checkout-button\\">Checkout</button>
          </form>
        </div>
      </div>
   </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  <script>
    $('#checkout-button').on('click', function(e){ 
       // Get address parts
      const street1 = $('#address').val();
      const street2 = $('#address2').val();
      const state = $('#state').val();
      const city = $('#city').val();
      const zipcode = $('#zip').val();

      $.get(
        \`/api/validate?street1=\${street1}&street2=\${street2}&state=\${state}&city=\${city}&zipcode=\${zipcode}\`,
        function(data) {
          if(data.addressValid){
            // Show address validation was correct, then submit form after 1 second
            setTimeout(function() {
              $('#address-form').submit();
            }, 1000);
            $('#address-feedback-correct').addClass('d-block');
            $('#address-feedback-incorrect').addClass('d-none');
            $('#address-feedback-correct').removeClass('d-none');
            $('#address-feedback-incorrect').removeClass('d-block');
          }
          else {
            // Show address validation was incorrect
            $('#address-feedback-correct').addClass('d-none');
            $('#address-feedback-incorrect').addClass('d-block');
            $('#address-feedback-correct').removeClass('d-block');
            $('#address-feedback-incorrect').removeClass('d-none');
          }
          console.log(data);
        }
      );
    });

    $('#address-form').on('submit', function validateAddress(e) {
      if (e.target.checkValidity() === false) {
        e.preventDefault(); // Stop default form submission
        e.stopPropagation(); // Stops propagation of submit event 
      }
      e.target.classList.add('was-validated');
    });
  </script>
 </body>
</html>
"
`;

exports[`App views should render the order summary page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "5348",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"14e4-moi8wRr0yCqSo0Uj+bi3g1jksSg\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the order summary page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
  <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!-- <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\"> -->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
  <link rel=\\"stylesheet\\" href=\\"/static/styles/summary.css\\" />
</head>
<body class=\\"bg-light\\">
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span>
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">0</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
    </div>   
</nav>
  </header>
  <div class=\\"content-container\\">
    <h1 class=\\"section-header\\">Order summary</h1>
    
    <!-- Loop through products list to display ordered products -->
    <!-- View is mostly similar to the cart page -->
    <div class=\\"card col-md-7\\">
      <div class=\\"card-body\\">
        
          <div class=\\"row d-flex align-items-center\\">
            <div class=\\"col-md-3 d-flex justify-content-center\\">
              <div class=\\"img-container\\">
                <img class=\\"product-image\\" src=\\"/static/images/product4.jpg\\" alt=\\"Product image\\">
              </div>
            </div>
            <div class=\\"col-md-4 text-md-left\\">
              <h4 class=\\"product-name\\"><strong>Product 4</strong></h4>
              <h4><small>Cheap product.</small></h4>
            </div>
            <div class=\\"col-md-5 text-md-right\\">
              <h4>$6.00<span class=\\"text-muted\\"> x </span>2</h4>
            </div>
          </div>
          
        
      </div>
      
      <div class=\\"card-footer bg-dark text-light d-flex align-items-center\\">
        <span id=\\"order-total\\">Order total: $12.00</span>
      </div>
    </div>

    <h3 class=\\"section-header\\">Shipping address</h3>

    <!-- Show address/shipping information in another card -->
    <div class=\\"card col-md-7\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <span><strong>Name: </strong>John Doe</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Address:</strong></span>
        </div>
        <div class=\\"row\\">
          <span>4800 CALHOUN RD</span>
        </div>
        <div class=\\"row\\">
          <span></span>
        </div>
        <div class=\\"row\\">
          <span>HOUSTON, TX 77204-2610</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Country: </strong>United States</span>
        </div>
      </div>
    </div>

    <h3 class=\\"section-header\\">Payment information</h3>

    <!-- Show payment information in another card -->
    <div class=\\"card col-md-7\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <span><strong>Name on card: </strong>John Doe</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Card type: </strong>Credit</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Card number: </strong>****-****-****-5678</span>
        </div>
      </div>
    </div>

    <h4 class=\\"section-header\\">Thanks for stopping by the Swag Store!</h4>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
</body>
</html>
"
`;

exports[`App views should render the order summary page successfully if no ID cookie is provided 1`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
  <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!-- <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\"> -->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
  <link rel=\\"stylesheet\\" href=\\"/static/styles/summary.css\\" />
</head>
<body class=\\"bg-light\\">
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span>
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">0</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
    </div>   
</nav>
  </header>
  <div class=\\"content-container\\">
    <h1 class=\\"section-header\\">Order summary</h1>
    
    <!-- Loop through products list to display ordered products -->
    <!-- View is mostly similar to the cart page -->
    <div class=\\"card col-md-7\\">
      <div class=\\"card-body\\">
        
      </div>
      
      <div class=\\"card-footer bg-dark text-light d-flex align-items-center\\">
        <span id=\\"order-total\\">Order total: $0.00</span>
      </div>
    </div>

    <h3 class=\\"section-header\\">Shipping address</h3>

    <!-- Show address/shipping information in another card -->
    <div class=\\"card col-md-7\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <span><strong>Name: </strong>John Doe</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Address:</strong></span>
        </div>
        <div class=\\"row\\">
          <span>4800 CALHOUN RD</span>
        </div>
        <div class=\\"row\\">
          <span></span>
        </div>
        <div class=\\"row\\">
          <span>HOUSTON, TX 77204-2610</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Country: </strong>United States</span>
        </div>
      </div>
    </div>

    <h3 class=\\"section-header\\">Payment information</h3>

    <!-- Show payment information in another card -->
    <div class=\\"card col-md-7\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <span><strong>Name on card: </strong>John Doe</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Card type: </strong>Credit</span>
        </div>
        <div class=\\"row\\">
          <span><strong>Card number: </strong>****-****-****-5678</span>
        </div>
      </div>
    </div>

    <h4 class=\\"section-header\\">Thanks for stopping by the Swag Store!</h4>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
</body>
</html>
"
`;

exports[`App views should render the root/home page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "3100",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"c1c-hLALIcgFbrKIFE1UvmdZ0Hv3poU\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the root/home page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
 <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!-- <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\"> -->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
 
 <link rel=\\"stylesheet\\" href=\\"/static/styles/home.css\\" />
</head>
<body class=\\"bg-light\\">
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span>
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
    </div>   
</nav>
  </header>
  <div class=\\"jumbotron jumbotron-fluid text-center\\">
    <div class =\\"container\\">
    <h1 class=\\"display-2\\">Swag Store</h1>
    <span class =\\"fas fa-glasses fa-4x\\"></span> 
    <p class=\\"lead\\"><strong>Put some swagger in your stride</strong></p>
    </div>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  </body>
</html>
"
`;
